fix: fix minor layout bugs

--- a/art-quiz/src/styles.css
+++ b/art-quiz/src/styles.css
@@ -50,6 +50,8 @@ a{
 .main {
   display: flex;
   justify-content: center;
+  position: relative;
+  overflow: hidden;
   width: 100vw;
   height: calc(100vh - 50px);
 }
